--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-icons": "^5.5.0",
+    "react-router-dom": "^7.10.0",
     "react-spinners": "^0.17.0"
   },
   "devDependencies": {
@@ -26,6 +27,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "baseline-browser-mapping": "^2.9.0",
     "eslint": "^9",
     "eslint-config-next": "16.0.1",
     "identity-obj-proxy": "^3.0.0",
